* Add management of BatchJob and JobQueue to admin interface ** This is a partial solution to #10 * Remove new, create and destroy actions from Work admin interface * Add extra filters and columns to Work admin interface * Update BatchJob model so dependent records (JobQueue, PageResult, PostprocPage) are destroyed when the associated BatchJob is destroyed * Add name virtual attribute to Font model which helps ActiveAdmin correctly assign labels in the interface

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,9 @@
 
 en:
   hello: "Hello world"
+  active_admin:
+    batch_actions:
+      action_label: "%{title}"
+      labels:
+        mark_not_started: "Mark Not Started"
+        mark_failed: "Mark Failed"
